; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_window.c_glfwGetWindowContentScale.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_window.c_glfwGetWindowContentScale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @glfwGetWindowContentScale(i32* %0, float* %1, float* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca float*, align 8
  %6 = alloca float*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store float* %1, float** %5, align 8
  store float* %2, float** %6, align 8
  %8 = load i32*, i32** %4, align 8
  store i32* %8, i32** %7, align 8
  %9 = load i32*, i32** %7, align 8
  %10 = icmp ne i32* %9, null
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load float*, float** %5, align 8
  %14 = icmp ne float* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load float*, float** %5, align 8
  store float 0.000000e+00, float* %16, align 4
  br label %17

17:                                               ; preds = %15, %3
  %18 = load float*, float** %6, align 8
  %19 = icmp ne float* %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = load float*, float** %6, align 8
  store float 0.000000e+00, float* %21, align 4
  br label %22

22:                                               ; preds = %20, %17
  %23 = call i32 (...) @_GLFW_REQUIRE_INIT()
  %24 = load i32*, i32** %7, align 8
  %25 = load float*, float** %5, align 8
  %26 = load float*, float** %6, align 8
  %27 = call i32 @_glfwPlatformGetWindowContentScale(i32* %24, float* %25, float* %26)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @_GLFW_REQUIRE_INIT(...) #1

declare dso_local i32 @_glfwPlatformGetWindowContentScale(i32*, float*, float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
